// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalScreen tests View Shows 'Cargando...' when the turns are not loaded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#bee6ef",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingTop": 17.5,
    }
  }
>
  <Text>
     Cargando... 
  </Text>
</View>
`;

exports[`GlobalScreen tests View Shows 'Se ha producido un error...' when the fetch failed 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#bee6ef",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingTop": 17.5,
    }
  }
>
  <Text>
     Se ha producido un error 
  </Text>
</View>
`;

exports[`GlobalScreen tests View Shows everything when the turns are loaded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#bee6ef",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "flex-start",
      "paddingTop": 17.5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#332554",
        "fontFamily": "montserrat-extra-bold",
        "fontSize": 38.95833442608516,
        "marginTop": 52.5,
        "textAlign": "left",
        "width": 712.5,
      }
    }
  >
    Turno de Febrero
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "marginTop": 17.5,
        "width": 712.5,
      }
    }
  >
    <View
      style={
        Object {
          "marginRight": 35,
          "marginTop": 78.75,
        }
      }
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 35.5,
          "elevation": 15,
          "overflow": "hidden",
          "width": 531.5,
        }
      }
    />
  </View>
</View>
`;
